# SPlayer_Android

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  android_build_help.txt  components.d.ts  err_android.txt  err_android_utf8.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  ts_errors.txt  tsconfig.web.tsbuildinfo  后来的我们_简繁合并.ttml
.github/workflows/: android.yml
electron/main/: index.ts
electron/main/ipc/: index.ts  ipc-mac-statusbar.ts
native/external-media-integration/: index.d.ts
native/tools/src/: analysis.rs
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/native-media/: Cargo.toml  permissions.md
src-tauri/plugins/native-media/android/: build.gradle  gradle.properties  settings.gradle
src-tauri/plugins/native-media/android/app/: build.gradle
src-tauri/plugins/native-media/android/src/main/: AndroidManifest.xml
src-tauri/plugins/native-media/android/src/main/kotlin/com/kid/splayer/nativemedia/: MediaSessionService.kt  NativeMediaPlugin.kt
src-tauri/plugins/native-media/src/: lib.rs
src-tauri/src/: android_fs.rs  audio_player.rs  lib.rs
src/api/: song.ts
src/composables/: useDragClose.ts  useInit.ts  useSongMenu.ts
src/i18n/: index.ts
src/layout/: AppLayout.vue
src/locales/: en-US.json  zh-CN.json
src/stores/: data.ts  local.ts  music.ts  setting.ts  status.ts  streaming.ts
src/types/: main.ts
src/utils/: auth.ts  cookie.ts  env.ts  helper.ts  meta.ts  request.ts
web/loading/: style.css
(+49 files in other folders)
