[package]
name = "native-media"
version = "0.1.0"
description = "Native Media Session Plugin for Tauri"
authors = ["SPlayer"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "native_media"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
